--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,7 @@ header h1 {
 }
 header a {
   text-decoration: none;
-  color: #fce138;
+  color: whitesmoke;
 }
 
 header nav {
@@ -43,8 +43,8 @@ header nav ul li a {
   font-size: 22px;
 }
 
+/*Footer start*/
 footer {
-  background: #fce138;
   width: 100%;
   padding: 40px 35px;
 }
@@ -72,8 +72,8 @@ section {
 
 /* Hero Style Start */
 .hero {
-  background-image: url('../images/hero-bg.jpg');
-  height: 600px;
+  background-image: url('../images/hero-background.jpg');
+  height: 300px;
   background-size: cover;
   background-position: center;
   position: relative;
@@ -81,44 +81,19 @@ section {
 /* Hero Style End */
 
 .hero-form {
-  border: 3px solid #024e76;
-  background-color: #fce138;
-  padding: 20px;
-  width: 500px;
-  color: #024e76;
+  background-color:black;
+  padding: 18px;
+  width: 400px;
+  color: white;
   position: absolute;
-  bottom: 120px;
-  right: 140px;
+  bottom: 40px;
+  right: 40px;
 }
 
-.hero-form h3 {
-  font-size: 24px;
+.hero-form h2 {
+  font-size: 35px;
   margin: 0;
-}
-.hero-form p {
-  margin: 5px 0 15px 0;
-}
-
-.form-input {
-  border: 1px solid #024e76;
-  display: block;
-  padding: 7px 15px;
-  font-size: 16px;
-  color: #024e76;
-  width: 100%;
-  margin-bottom: 15px;
-}
-
-.hero-form label {
-  margin: 0 5px;
-}
-
-.hero-form button {
-  color: #fce138;
-  background-color: #024e76;
-  border: none;
-  padding: 10px 20px;
-  font-size: 16px;
+  text-align: center;
 }
 
 .intro {
@@ -135,7 +110,6 @@ section {
 
 .steps {
   text-align: center;
-  background: #fce138;
 }
 
 .steps div {
@@ -194,92 +168,6 @@ section {
   border-color: #39a6b2;
 }
 
-.trainers {
-  text-align: center;
-}
 
-.trainer {
-  width: 900px;
-  margin: 0 auto 30px auto;
-  background: #024e76;
-  color: #fce138;
-  overflow: auto;
-}
-
-.trainer img {
-  width: 35%;
-  float: left;
-}
-
-.trainer-bio {
-  padding: 35px;
-  float: left;
-  width: 65%;
-}
-
-.trainer-bio h3 {
-  font-size: 32px;
-  margin-bottom: 8px;
-}
-
-.trainer-bio h4 {
-  font-weight: lighter;
-  font-size: 26px;
-  margin-bottom: 25px;
-}
-
-.trainer-bio p {
-  font-size: 17px;
-  line-height: 1.3;
-}
-
-.text-left {
-  text-align: left;
-}
-
-.text-right {
-  text-align: right;
-}
-
-/* REACH OUT STYLES START */
-.contact {
-  text-align: center;
-  background: #024e76;
-}
-
-.contact h2 {
-  color: #fce138;
-}
-
-.contact-info iframe {
-  width: 400px;
-  height: 400px;
-}
-
-.contact-info div {
-  width: 410px;
-  display: inline-block;
-  vertical-align: top;
-  text-align: left;
-  margin: 30px 0 0 60px;
-  color: white;
-}
-
-.contact-info h3 {
-  color: #fce138;
-  font-size: 32px;
-}
-
-.contact-info p,
-.contact-info address {
-  margin: 20px 0;
-  line-height: 1.5;
-  font-size: 20px;
-  font-style: normal;
-}
-
-.contact-info a {
-  color: #fce138;
-}
 
 /* REACH OUT STYLES END */
