--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,8 +86,6 @@ header nav ul li a {
   font-size: 22px;
 }
 /* Hero Style End */
-
-
 /*about me section*/
 .intro {
   display: flex;
@@ -118,43 +116,44 @@ header nav ul li a {
 }
 
 /* work section*/
-.steps {
+.my-work {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin: 10px;
+}
+
+.my-work a {
+  width: 100%;
+  height: 75%;
   text-align: center;
 }
 
-.steps div {
-  margin-bottom: 80px;
-}
-
-.steps img {
-  width: 15%;
-  margin: 10px 0;
-}
-
-.steps h3 {
-  color: white;
-  font-size: 46px;
-  margin-top: 10px;
-}
-
-.steps p {
-  color: white;
-  font-size: 23px;
-}
-
-.steps span {
-  font-size: 38px;
-}
-
 .surfer {
-  width: 100%;
-  background-image: url('../images/sky-puzzel.jpg');
-  background-repeat: no-repeat;
+  width: 80%;
   height: 400px;
-  width: 900px;
+  margin: 15px 15px;
+  background-image: url('../images/sky-puzzel.jpg');
+  display: flex;
+  align-items:flex-end;
+  border: solid 5px  rgb(114, 167, 192);
+  background-repeat: no-repeat;
   background-size: cover;
-  background-position: center;
-  position: relative;
+}
+
+.surfer span {
+  display: flex;
+  height: 60px;
+  width: 18%;
+  margin: 0px 0px 10px 0px;
+  background-color: white;
+  align-items: center;
+  font-size: 30px;
+  font-family:cursive;
+  font-weight: 500;
+  color: white;
+  position: absolute;
+  border-radius: 0px 15px 15px 0px;
 }
 
 .two-surfer{
