--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -173,10 +173,44 @@ header nav ul li a {
   border:  solid 5px rgb(114, 167, 192);
   align-items: center;
   margin: 20px;
-  background-image: url(../images/placeholder3.png);
   background-size: cover;
-  color: rgba(40, 45, 99, 0.952);
-  border-radius: 20px;
+  color: black;
+}
+
+.flex-item:hover {
+  width: 48%;
+  height: 170px;
+}
+
+.flex-item a {
+  width: 100%;
+  height: 100%;
+}
+
+.flex-item img {
+  width: 100%;
+  height: 100%;
+  border-radius: 15px;
+}
+
+
+.flex-item h3 {
+  display: flex;
+  height: 40px;
+  width: 8%;
+  background-color: white;
+  position: absolute;
+  border-radius: 5px 5px 5px 5px;
+}
+
+.flex-item h3 , .main-project span a {
+  text-decoration: none;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  font-size: 25px;
+  font-family:cursive;
+  font-weight: 500;
 }
 
 /*Footer start*/
